--- a/index.css
+++ b/index.css
@@ -2,3 +2,10 @@ body{
 background: url(http://www.sftravel.com/sites/sftraveldev.prod.acquia-sites.com/files/SanFrancisco_0.jpg) no-repeat center center fixed;
 background-size: center;
 }
+
+.header{
+  width: 100%;
+  height: 100px;
+  background-color: #ffffff;
+  font-family:"Courier New";
+}
