--- a/index.css
+++ b/index.css
@@ -4,6 +4,8 @@ background-size: center;
 }
 
 .header{
+  position: absolute;
+  margin:0;
   width: 100%;
   height: 100px;
   background-color: #ffffff;
