--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ background-size: center;
   top: 80px;
   width: 100%;
   height: 25px;
-  background-color: #ffffff;
+  background-color: #484848;
   font-family:"Courier New";
+  font-size: 1;
 }
