--- a/index.css
+++ b/index.css
@@ -7,8 +7,8 @@ background-size: center;
   position: absolute;
   top: 80px;
   width: 100%;
-  height: 25px;
-  background-color: #484848;
+  height: 30px;
+  background-color: #c0c6d1;
   font-family:"Courier New";
   font-size: 1;
 }
