--- a/index.css
+++ b/index.css
@@ -3,12 +3,26 @@ background: url(http://www.sftravel.com/sites/sftraveldev.prod.acquia-sites.com/
 background-size: center;
 }
 
-.header{
-  position: absolute;
+a:link{
   top: 80px;
   width: 100%;
   height: 30px;
-  background-color: #c0c6d1;
+  /*background-color: #c0c6d1;*/
   font-family:"Courier New";
   font-size: 1;
+  text-decoration: none;
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+  
+}
+
+h1{
+    font-size: 600%;
+    font-family: "Courier New";
+    text-align: center;
+}
+p{
+    color: black;
+    font-size: 400%;
 }
