--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ background-size: center;
 }
 
 a:link{
+  position: bottom right;
   top: 80px;
   width: 100%;
   height: 30px;
@@ -11,9 +12,7 @@ a:link{
   font-family:"Courier New";
   font-size: 1;
   text-decoration: none;
-    position: absolute;
-    bottom: 8px;
-    right: 16px;
+    
   
 }
 
