--- a/about.css
+++ b/about.css
@@ -2,18 +2,16 @@ body{
 background: url(https://s3-us-west-2.amazonaws.com/sfmomamedia/static/sfmoma/images/logo-parts-sf.png) no-repeat center center fixed;
 background-size: center;
 }
-h1{
-    font-size: 650%;
-    font-family: "Courier New";
-    color: orange;
-    text-align: center;
-}
 p{
     font-size: 300%;
     font-family: "Courier New";
     text-align: center;
 }
-a:link{
-    text-decoration: none;
-    color: black;`
+.navbar{
+  width: 100%;
+  height: 5px;
+  background-color: rgba(255,255,255,1.0);
+  color: black;
+  font-family:"Courier New";
+  font-size: 1;
 }
