--- a/contact.css
+++ b/contact.css
@@ -2,10 +2,12 @@ body{
 background: url(https://s3-us-west-2.amazonaws.com/sfmomamedia/static/sfmoma/images/logo-parts-sf.png) no-repeat center center fixed;
 background-size: center;
 }
-a:link{
-    text-decoration: none;
-    position: absolute;
-    bottom: 8px;
-    right: 16px;
-    color: black;
+.navbar{
+  width: 100%;
+  height: 5px;
+  background-color: rgba(255,255,255,1.0);
+  color: black;
+  font-family:"Courier New";
+  font-size: 1;
 }
+
