--- a/index.css
+++ b/index.css
@@ -9,9 +9,10 @@ background-size: center;
   color: black;
   font-family:"Courier New";
   font-size: 1;
-  text-decoration: none;
-    
-  
+  text-decoration: none;   
+}
+a:link{
+    font-size: 300%;
 }
 
 h1{
