--- a/about.css
+++ b/about.css
@@ -14,4 +14,9 @@ p{
   color: black;
   font-family:"Courier New";
   font-size: 1;
+  text-decoration: none;
+}
+a:link{
+    font-size: 210%;
+      text-decoration: none;
 }
