--- a/dessertndrinks.css
+++ b/dessertndrinks.css
@@ -6,6 +6,7 @@
   color: black;
   font-family:"Courier New";
   font-size: 1;
+  text-decoration: none;
 }
 
 body, html {
@@ -24,4 +25,8 @@ body, html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+a:link{
+    font-size: 210%;
+      text-decoration: none;
 }
